[package]
name = "bulletproofs"
# Before doing a release:
# - update version field
# - update html_root_url
# - update CHANGELOG
version = "5.0.0"
authors = ["Cathie Yun <cathieyun@gmail.com>",
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/zkcrypto/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "ristretto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs using Ristretto"
edition = "2018"

[dependencies]
curve25519-dalek = { version = "4.1.1", features = ["digest", "group", "serde"] }
group = { version = "0.13", default-features = false }
subtle = { version = "2.5", default-features = false }
sha3 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["alloc"], optional = true }
rand = { version = "0.8", default-features = false, optional = true }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1", default-features = false }
thiserror = { version = "1", optional = true }
merlin = { version = "3", default-features = false }
clear_on_drop = { version = "0.2", default-features = false }

[dev-dependencies]
hex = "0.3"
criterion = "0.3"
bincode = "1"
rand_chacha = "0.3"
curve25519-dalek = { version = "4.1.1", features = ["digest", "group", "legacy_compatibility", "rand_core", "serde"] }

[features]
default = ["std"]
std = ["rand", "rand_core", "rand/std", "rand/std_rng", "thiserror", "curve25519-dalek/rand_core"]


[[test]]
name = "range_proof"

[[bench]]
name = "range_proof"
harness = false

[[bench]]
name = "generators"
harness = false

